# revolution

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: _build.yml  _checks.yml  preview.yml  prod.yml  test.yml
docs/: USER_GUIDE.md
server/: __init__.py  db.py  engine.py  events.py  exporters.py  main.py  settings.py
server/routers/: debates.py  parties.py  personas.py  relationships.py  settings.py  stream.py
src/: main.py
src/agents/: base.py  democrat.py  loader.py  prompts.py  republican.py
src/agents/data/constitution/: con_adv_baldwin.json  con_asst_clymer.json  con_head_castle.json
src/agents/data/democrat/: 01_dem_head.json  04_dem_adv_social.json  07_dem_asst_labor.json  11_dem_asst_research.json  dem_adv_climate.json  dem_adv_econ.json  dem_head.json  (+8 more)
src/cli/: display.py
src/config/: __init__.py  store.py
src/graphs/: main_graph.py  nodes.py  party_graph.py
src/state/: types.py
src/voting/: consensus.py
tests/: conftest.py  test_agents.py  test_orchestration.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: App.tsx  api.ts  hooks.ts  main.tsx  meta.ts  theme.ts  types.ts
web/src/components/: Avatar.tsx  Btn.tsx  Card.tsx  DisclaimerBar.tsx  Form.tsx  Icon.tsx  Modal.tsx  PersonaPicker.tsx  Seal.tsx  Sidebar.tsx  Tags.tsx
web/src/screens/: AddPersonaModal.tsx  Arena.tsx  ArenaWaiting.tsx  Dashboard.tsx  ExportModal.tsx  Graph.tsx  Launch.tsx  Parties.tsx  PersonaDetail.tsx  Personas.tsx  Placeholder.tsx  Results.tsx  Settings.tsx
(+36 files in other folders)
